Bug 391946 - Default mode in 'Find in folder' is not preserved
Summary: Default mode in 'Find in folder' is not preserved
Status: RESOLVED FIXED
Alias: None
Product: krusader
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.6.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Krusader Bugs Distribution List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-03-16 21:33 UTC by linnets
Modified: 2018-06-22 08:00 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description linnets 2018-03-16 21:33:27 UTC
1) Settings > Configure Krusader > Panel > Search Bar > Default Mode : Search
2) Ctrl+I to Open 'Search Filter'
3) Escape search mode
4) Ctrl+F, or type something

What is expected, is that in step 4, the mode of search bar would be 'Search', but instead of 'Filter' mode.
I must manually to chose the 'Search' mode again (when search bar appears).
Comment 1 Alex Bikadorov 2018-03-18 17:20:48 UTC
"Default Mode" means the search mode when opening the search bar for the first time with Ctrl+F. Because the search bar was already open and last mode was "filter" it is "filter" again.
I would hardly say this is a bug. What do you expect when opening the search bar with ctrl+i and set the mode to "select"? Should it be "select" again when opening with "ctrl+i"?

Suggestion: Would it help to add shortcuts for all three search modes?
Comment 2 linnets 2018-03-18 20:59:19 UTC
(In reply to Alex Bikadorov from comment #1)
> What do you expect when opening the search
> bar with ctrl+i and set the mode to "select"? Should it be "select" again
> when opening with "ctrl+i"?
> 
> Suggestion: Would it help to add shortcuts for all three search modes?

I think if it's not a bug, it would be misleading, when in the shortcut setting section clearly described that: "Open search filter" with shortcut "Ctrl + I".
That is, when I want to search with filter mode, I using "Ctrl + I".

But, also, in the configuration I mentioned, the 'Default Mode' for 'Search Bar', so naturally, I think that if I open searching bar (Ctrl + F), it would be the 'Default Mode'.

If preserving the state of the mode of the search bar, it's redundant for either 'Default Mode' or 'Ctrl+F' shortcut. When 'Default Mode' is used only once (at the first time of using search bar), or 'Ctrl+F' would be no different to 'Ctrl+I' if 'Ctrl+I' is triggered first.

As for example, in DoubleCMD, there are shortcuts 'Ctrl+S' for 'Search', and 'Ctrl+F' for 'Filter'.
Comment 3 Alex Bikadorov 2018-03-31 17:35:05 UTC
I infer from your answer that adding dedicated shortcuts for all three search modes would be a solution.

But yes, the default mode setting would become redundant. Maybe we should just remove it(?).
Comment 4 Toni Asensi Esteve 2018-04-02 06:00:12 UTC
> I infer from your answer that adding dedicated shortcuts for all 
> three search modes would be a solution.
Seeing the option of having a shortcut for every search mode, it makes sense, and it seems that operating Krusader will be easier for new users ( and expert ones :-) ).    

> But yes, the default mode setting would become redundant. Maybe we
> should just remove it(?).
Removing it would also make Krusader simpler :-) .

> As for example, in DoubleCMD, there are shortcuts 'Ctrl+S' for 'Search', 
> and 'Ctrl+F' for 'Filter'.
Additionally, if Krusader's way of working is similar to the DoubleCMD one, it will benefit people that have to use Windows :-)
Comment 5 Toni Asensi Esteve 2018-04-02 06:09:52 UTC
> Additionally, if Krusader's way of working is similar to the DoubleCMD one, it will benefit people that have to use Windows :-)
I mean, people that use Krusader but also have to use Windows, they tend to look for a free/libre Windows program similar to Krusader, like DoubleCMD.
Comment 6 Alex Bikadorov 2018-05-20 18:32:33 UTC
Git commit 59574af2019db60d658c43854225627dfc08c747 by Alexander Bikadorov.
Committed on 20/05/2018 at 18:29.
Pushed by abikadorov into branch 'master'.

Use default search bar search mode setting always on "start by typing"

And added dedicated shortcut for starting search bar in select mode.

And removed disabling of "Case sensitve" setting when "Start by typing" is
unchecked. Search bar can be show not only by typing in panel.

FIXED: [ 391946 ] Default mode in 'Find in folder' is not preserved

Differential Revision: https://phabricator.kde.org/D12640

M  +10   -18   krusader/Konfigurator/kgpanel.cpp
M  +0    -3    krusader/Konfigurator/kgpanel.h
M  +7    -7    krusader/Panel/krsearchbar.cpp
M  +2    -2    krusader/Panel/krsearchbar.h
M  +7    -2    krusader/Panel/listpanel.cpp
M  +2    -1    krusader/Panel/listpanel.h
M  +5    -2    krusader/Panel/listpanelactions.cpp
M  +1    -1    krusader/Panel/listpanelactions.h

https://commits.kde.org/krusader/59574af2019db60d658c43854225627dfc08c747
Comment 7 linnets 2018-05-20 20:31:01 UTC
Thank you very much! The search feature is very convenient now!
Comment 8 Nikita Melnichenko 2018-06-22 08:00:45 UTC
Git commit 9d7c2205d0597a516929e296ed17de981cef21ea by Nikita Melnichenko, on behalf of Alexander Bikadorov.
Committed on 22/06/2018 at 07:55.
Pushed by melnichenko into branch '2.7'.

Use default search bar search mode setting always on "start by typing"

And added dedicated shortcut for starting search bar in select mode.

And removed disabling of "Case sensitve" setting when "Start by typing" is
unchecked. Search bar can be show not only by typing in panel.

FIXED: [ 391946 ] Default mode in 'Find in folder' is not preserved

Differential Revision: https://phabricator.kde.org/D12640

(cherry picked from commit 59574af2019db60d658c43854225627dfc08c747)

M  +10   -18   krusader/Konfigurator/kgpanel.cpp
M  +0    -3    krusader/Konfigurator/kgpanel.h
M  +7    -7    krusader/Panel/krsearchbar.cpp
M  +2    -2    krusader/Panel/krsearchbar.h
M  +7    -2    krusader/Panel/listpanel.cpp
M  +2    -1    krusader/Panel/listpanel.h
M  +5    -2    krusader/Panel/listpanelactions.cpp
M  +1    -1    krusader/Panel/listpanelactions.h

https://commits.kde.org/krusader/9d7c2205d0597a516929e296ed17de981cef21ea