Use default search bar search mode setting always on "start by typing"

And added dedicated shortcut for starting search bar in select mode.

And removed disabling of "Case sensitve" setting when "Start by typing" is
unchecked. Search bar can be show not only by typing in panel.

FIXED: [ 391946 ] Default mode in 'Find in folder' is not preserved
BUG: 391946

Differential Revision: https://phabricator.kde.org/D12640